// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main component test should open an anime page when i click 1`] = `
<main>
  <header
    class="header larger--height"
    style="background-image: url(https://s4.anilist.co/file/anilistcdn/media/anime/banner/20474-peBLuUVAzNC3.jpg);"
  >
    <h1
      class="header--logo"
      style="color: white; text-shadow: 0px 0px 6px null, 0px 0px 2px black;"
    >
      AnimeBonds
    </h1>
    <span
      aria-label="search"
      class="header--search"
      data-testid="search-button"
      role="img"
    >
      🔎
    </span>
    <div
      class="header__anime"
    >
      <img
        alt="JoJo's Bizarre Adventure: Stardust Crusaders header"
        class="header__anime--image"
        src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20474-0VwWX4bKJkb1.jpg"
      />
      <div
        class="header__anime--title-area"
      >
        <h1
          class="header__anime--title"
        >
          JoJo no Kimyou na Bouken: Stardust Crusaders
        </h1>
        <button
          class="header__anime--more"
          data-testid="JoJo's Bizarre Adventure: Stardust Crusaders - Read About"
          role="button"
        >
          Read about!
        </button>
      </div>
    </div>
    <div
      class="shadows"
    />
  </header>
  <section
    class="list__page"
    data-projection-id="1"
    style="padding-top: 0px;"
  >
    <div
      class="anime__page"
      data-projection-id="2"
    >
      <div
        class="anime__page--container"
        data-projection-id="3"
        style="opacity: 0;"
      >
        <span
          class="anime__page--close"
        >
          X
        </span>
        <section
          class="anime__header"
          data-testid="JoJo's Bizarre Adventure: Stardust Crusaders - Page"
        >
          <img
            alt="JoJo no Kimyou na Bouken: Stardust Crusaders"
            class="anime__header--cover"
            src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20474-0VwWX4bKJkb1.jpg"
          />
          <h2
            class="anime__header--title"
          >
            JoJo no Kimyou na Bouken: Stardust Crusaders
          </h2>
        </section>
        <nav
          class="anime__nav"
        >
          <a
            aria-current="page"
            class="active"
            href="/anime/20474/overview"
          >
            Overview
          </a>
          <a
            class=""
            href="/anime/20474/episodes"
          >
            Episodes
          </a>
        </nav>
        <section
          class="anime__bio"
        >
          <section
            class="anime__bio--text"
          >
            <h1>
              Anime Bio:
            </h1>
            <p
              class="description"
            >
              In a Japanese jail sits 17-year-old Jotaro Kujo: punk, fighter, delinquent...and possessed by a force beyond his control! Around the world, evil spirits are awakening: "Stands," monstrous invisible creatures which give their bearers incredible powers. To save his mother's life, Jotaro must tame his dark forces and travel around the world to Cairo, Egypt, where a hundred-year-old vampire thirsts for the blood of his family. But the road is long, and an army of evil Stand Users waits to kill JoJo and his friends...

              <br />
              <br />
              
(Source: Viz Media)
            </p>
          </section>
          <section
            class="anime__char"
          >
            <h1>
              Main Characters:
            </h1>
            <div
              class="chars"
            >
              <div
                class="chars--bio"
              >
                <img
                  alt="Joutarou Kuujou"
                  class="chars--pic"
                  name="Joutarou Kuujou"
                  src="https://s4.anilist.co/file/anilistcdn/character/medium/b4003-gWDSEGbeOAll.png"
                />
                <p
                  class="chars--bio__name"
                >
                  Joutarou Kuujou
                </p>
              </div>
              <div
                class="chars--bio"
              >
                <img
                  alt="Mohammed Avdol"
                  class="chars--pic"
                  name="Mohammed Avdol"
                  src="https://s4.anilist.co/file/anilistcdn/character/medium/b8946-BumWgNGkPP9W.jpg"
                />
                <p
                  class="chars--bio__name"
                >
                  Mohammed Avdol
                </p>
              </div>
              <div
                class="chars--bio"
              >
                <img
                  alt="Noriaki Kakyouin"
                  class="chars--pic"
                  name="Noriaki Kakyouin"
                  src="https://s4.anilist.co/file/anilistcdn/character/medium/8945-gyPfrVpCb5CF.jpg"
                />
                <p
                  class="chars--bio__name"
                >
                  Noriaki Kakyouin
                </p>
              </div>
              <div
                class="chars--bio"
              >
                <img
                  alt="Jean-Pierre Polnareff"
                  class="chars--pic"
                  name="Jean-Pierre Polnareff"
                  src="https://s4.anilist.co/file/anilistcdn/character/medium/b4368-1KToX8uSi1U1.png"
                />
                <p
                  class="chars--bio__name"
                >
                  Jean-Pierre Polnareff
                </p>
              </div>
              <div
                class="chars--bio"
              >
                <img
                  alt="Joseph Joestar"
                  class="chars--pic"
                  name="Joseph Joestar"
                  src="https://s4.anilist.co/file/anilistcdn/character/medium/b6356-RImEfUfHpC58.png"
                />
                <p
                  class="chars--bio__name"
                >
                  Joseph Joestar
                </p>
              </div>
            </div>
          </section>
        </section>
      </div>
    </div>
    <section
      class="list__row"
    >
      <div
        class="list__section"
      >
        <div
          class="list__title"
        >
          Action
        </div>
        <div
          class="list__section--next"
        />
        <div
          class="list__section--next after"
        />
        <div
          class="list__section--shadow"
        />
        <div
          class="list__wrapper"
        >
          <div
            class="list__wrapper--slide"
            data-genre="action"
            data-load="done"
            style="transform: translateX(-0px);"
          >
            <section
              class="list__cell"
            >
              <img
                alt="Log Horizon"
                class="list__cell--item 17265"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17265-95SA9keO8Jtv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kenichi: The Mightiest Disciple"
                class="list__cell--item 1559"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1559-7ZlyZxtBNo8g.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Ushio and Tora 2 (TV)"
                class="list__cell--item 21241"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21241-Avzz7tcb0yTy.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball"
                class="list__cell--item 223"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx223-Ld6vrSnd081L.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Heartcatch Precure!"
                class="list__cell--item 7645"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx7645-YRvajw8WUsfJ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: Adventure of Sinbad"
                class="list__cell--item 21394"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21394-yauvzIHGAoZv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part IV"
                class="list__cell--item 20906"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20906-6hK5SuAB4MmV.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Overlord III"
                class="list__cell--item 101474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101474-tGRyvSAWMjU9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure (TV)"
                class="list__cell--item 14719"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14719-XFOPewvDtDdA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Blood Blockade Battlefront & Beyond"
                class="list__cell--item 97886"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx97886-iArtYIxZzGcR.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 3"
                class="list__cell--item 119806"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx119806-fM8V7oRgmSmh.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Angel Beats!"
                class="list__cell--item 6547"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6547-3jWzWyXg34Et.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Saga of Tanya the Evil"
                class="list__cell--item 21613"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21613-uh46F6TNGbNf.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Full Metal Panic? Fumoffu"
                class="list__cell--item 72"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx72-dalTPVFKaOuZ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Sailor Moon S"
                class="list__cell--item 532"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx532-R0ntF8tWnVUu.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Bungo Stray Dogs"
                class="list__cell--item 21311"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21311-hAXyT8Yoh6G9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fate/Grand Order Absolute Demonic Front: Babylonia"
                class="list__cell--item 103275"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx103275-SN0wwshS3tWA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magical Girl Lyrical Nanoha A's"
                class="list__cell--item 77"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx77-SwBCj7R1enWi.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Princess Connect! Re:Dive Season 2"
                class="list__cell--item 122808"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx122808-TUKyfYWKmOX3.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="My Hero Academia"
                class="list__cell--item 21459"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21459-oZMZ7JwS5Sxq.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Clover"
                class="list__cell--item 97940"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx97940-bPydLjny8PUw.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="The Rising of the Shield Hero"
                class="list__cell--item 99263"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx99263-SJSk5d6mhQZO.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: The Labyrinth of Magic"
                class="list__cell--item 14513"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14513-b4C3J03GF6UT.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Noragami"
                class="list__cell--item 20447"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20447-EoQXeygHaVCK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon"
                class="list__cell--item 889"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx889-Wf4GZRnHv6Dp.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Second Arc"
                class="list__cell--item 20879"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20879-IqgXMXuUMvRM.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2"
                class="list__cell--item 20652"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20652-8ft6GZKEoeWn.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Toilet-bound Hanako-kun"
                class="list__cell--item 108463"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx108463-knWkFUR311ho.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 15059"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/15059.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fullmetal Alchemist"
                class="list__cell--item 121"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx121-JUlbsyhTUNkk.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball Z"
                class="list__cell--item 813"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx813-QBIvCQgHcjcF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 2"
                class="list__cell--item 99557"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx99557-AiXG7q4CsRFG.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kill la Kill"
                class="list__cell--item 18679"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx18679-zE07Y4SFaOiO.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Rurouni Kenshin"
                class="list__cell--item 45"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx45-DEFgZRCxiGmF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Moribito: Guardian of the Spirit"
                class="list__cell--item 1827"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1827-snIp62SY7ZFK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure: Stardust Crusaders"
                class="list__cell--item 20474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20474-0VwWX4bKJkb1.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Yona of the Dawn"
                class="list__cell--item 20770"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20770-brCDvhTXlums.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!!"
                class="list__cell--item 6746"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6746-Q4EmstN2fy0R.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 4th Stage"
                class="list__cell--item 18"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b18-r7IirVmwP89u.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Third Arc"
                class="list__cell--item 20880"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20880-WsvmgSdL8lhP.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Naruto"
                class="list__cell--item 20"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20-YJvLbgJQPCoI.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part V"
                class="list__cell--item 100957"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx100957-YzfrlJDqswJc.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dorohedoro"
                class="list__cell--item 105228"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx105228-9KSgNMIX3kPa.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy: Sword Travels in the East"
                class="list__cell--item 98143"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx98143-PW8iwqFlNS4M.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Assassination Classroom"
                class="list__cell--item 20755"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20755-q0b3Ok1cAbPd.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 2nd Stage"
                class="list__cell--item 186"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186-xlQSLsOJbrx4.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon: The Second Barrage"
                class="list__cell--item 1519"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1519-cScqJxQW3LNL.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 2402"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx2402-hbo1SbfcM5hm.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="That Time I Got Reincarnated as a Slime"
                class="list__cell--item 101280"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101280-ezBXqEHi8pg0.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kingdom Season 2"
                class="list__cell--item 17389"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17389-jf3N776Tv7P5.jpg"
              />
            </section>
          </div>
        </div>
      </div>
      <h1>
        Some problem with 
        Drama
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Adventure
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mystery
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Romance
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Sci-fi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Fantasy
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Ecchi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mecha
         data from anilist!
      </h1>
    </section>
  </section>
</main>
`;

exports[`Main component test should search an anime 1`] = `
<main>
  <header
    class="header__browser"
    style="background-image: url(undefined);"
  >
    <h1
      class="header--logo"
      style="color: white; text-shadow: 0px 0px 6px white, 0px 0px 2px black;"
    >
      AnimeBonds
    </h1>
    <span
      aria-label="search"
      class="header--search"
      data-testid="search-button"
      role="img"
    >
      🔎
    </span>
  </header>
  <section
    class="list__page"
    data-projection-id="4"
    style="padding-top: 0px;"
  >
    <div
      class="anime__page"
      data-projection-id="7"
    >
      <div
        class="anime__page--container"
        data-projection-id="8"
        style="opacity: 0.19810910652088856;"
      >
        <span
          class="anime__page--close"
        >
          X
        </span>
        <section
          class="anime__page--search"
        >
          <input
            class="search__input"
            placeholder="Search your favorite animes"
            type="text"
            value="One Piece"
          />
          <section
            class="list__row"
          >
            <div
              class="list__section"
            >
              <div
                class="list__title"
              >
                Searching for One Piece
              </div>
              <div
                class="list__section--next"
              />
              <div
                class="list__section--next after"
              />
              <div
                class="list__section--shadow"
              />
              <div
                class="list__wrapper"
              >
                <div
                  class="list__wrapper--slide"
                  data-genre="one-piece"
                  data-load="done"
                  style="transform: translateX(-0px);"
                >
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="ONE PIECE"
                      class="list__cell--item 21"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21-tXMN3Y20PIL9.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="ONE PIECE: The Movie"
                      class="list__cell--item 459"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx459-2OTwLud8OnFA.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Episode of Merry - The Tale of One More Friend"
                      class="list__cell--item 19123"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx19123-leET1CrSJknT.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Stampede"
                      class="list__cell--item 105143"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx105143-x7iaiwKyGKpB.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 15323"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/15323.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Romance Dawn Story"
                      class="list__cell--item 5252"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/5252.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 116054"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx116054-FD9QZRypg2Ot.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Heart of Gold"
                      class="list__cell--item 21831"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21831-VoDhEVaTaGEq.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Mega Mecha Soldier of Karakuri Castle"
                      class="list__cell--item 465"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx465-qSRr0MKYhS0I.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Baron Omatsuri and the Secret Island"
                      class="list__cell--item 464"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/464.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Clockwork Island Adventure"
                      class="list__cell--item 460"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx460-sVkSq3ykAv1U.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Chopper’s Kingdom on the Island of Strange Animals"
                      class="list__cell--item 461"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx461-DC9fMDl3AaK1.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece The Movie: The Dead End Adventure"
                      class="list__cell--item 462"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx462-Ig8zfdsFWcql.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: The Curse of the Sacred Sword"
                      class="list__cell--item 463"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx463-QDnETPoHp9oD.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: The Desert Princess and the Pirates, Adventures in Alabasta"
                      class="list__cell--item 2107"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx2107-H8bRuRRbhCIJ.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Episode Of Chopper +: The Miracle Winter Cherry Blossom"
                      class="list__cell--item 3848"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b3848-mkoz4nioyztr.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Episode of Skypiea"
                      class="list__cell--item 101918"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b101918-PYSSW4c9WS6a.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="ONE PIECE FILM RED"
                      class="list__cell--item 141902"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx141902-jMVMWe7T2Ham.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece Film: Z"
                      class="list__cell--item 12859"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx12859-uQFENDPzMWz6.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece Film: Gold"
                      class="list__cell--item 21335"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21335-XsXdE0AeOkkZ.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece Film: Strong World"
                      class="list__cell--item 4155"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx4155-qNQTBREF92fp.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 107110"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/n107110-pF0sMxDe3aLi.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 113308"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx113308-u6wWW3d01DSt.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 101099"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b101099-3AoCbJWTj2cV.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 16468"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b16468-pMKFwfY8lYZX.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 2386"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/2386-NQQkq1taHJ08.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 2680"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx2680-WChEC5K8EebB.png"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Adventure of Nebulandia"
                      class="list__cell--item 21485"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/21485-KR1sv4rYSe6V.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 1238"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b1238-rU6fE1pv2kmd.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Episode of East Blue"
                      class="list__cell--item 99302"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx99302-b40WIhc5dylo.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Defeat the Pirate Ganzack!"
                      class="list__cell--item 466"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx466-bVP54I7dCB2F.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece 3D2Y: Overcome Ace’s Death! Luffy’s Vow to his Friends"
                      class="list__cell--item 20835"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20835-kYzoAyPelQXi.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece 3D: Mugiwara Chase"
                      class="list__cell--item 9999"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/9999.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      alt="One Piece: Django's Dance Carnival"
                      class="list__cell--item 2385"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/n2385-us99rub90MzL.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 12001"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx12001-XX0NNNfaKZ3e.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 1094"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/1094.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 2490"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/2490-AL4WmnCJ5zvE.jpg"
                    />
                  </section>
                  <section
                    class="list__cell"
                  >
                    <img
                      class="list__cell--item 10033"
                      src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx10033-V7xnlgAVtaVR.jpg"
                    />
                  </section>
                </div>
              </div>
            </div>
          </section>
        </section>
      </div>
    </div>
    <section
      class="list__row"
    >
      <div
        class="list__section"
      >
        <div
          class="list__title"
        >
          Action
        </div>
        <div
          class="list__section--next"
        />
        <div
          class="list__section--next after"
        />
        <div
          class="list__section--shadow"
        />
        <div
          class="list__wrapper"
        >
          <div
            class="list__wrapper--slide"
            data-genre="action"
            data-load="done"
            style="transform: translateX(-0px);"
          >
            <section
              class="list__cell"
            >
              <img
                alt="Log Horizon"
                class="list__cell--item 17265"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17265-95SA9keO8Jtv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kenichi: The Mightiest Disciple"
                class="list__cell--item 1559"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1559-7ZlyZxtBNo8g.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Ushio and Tora 2 (TV)"
                class="list__cell--item 21241"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21241-Avzz7tcb0yTy.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball"
                class="list__cell--item 223"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx223-Ld6vrSnd081L.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Heartcatch Precure!"
                class="list__cell--item 7645"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx7645-YRvajw8WUsfJ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: Adventure of Sinbad"
                class="list__cell--item 21394"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21394-yauvzIHGAoZv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part IV"
                class="list__cell--item 20906"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20906-6hK5SuAB4MmV.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Overlord III"
                class="list__cell--item 101474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101474-tGRyvSAWMjU9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure (TV)"
                class="list__cell--item 14719"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14719-XFOPewvDtDdA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Blood Blockade Battlefront & Beyond"
                class="list__cell--item 97886"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx97886-iArtYIxZzGcR.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 3"
                class="list__cell--item 119806"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx119806-fM8V7oRgmSmh.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Angel Beats!"
                class="list__cell--item 6547"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6547-3jWzWyXg34Et.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Saga of Tanya the Evil"
                class="list__cell--item 21613"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21613-uh46F6TNGbNf.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Full Metal Panic? Fumoffu"
                class="list__cell--item 72"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx72-dalTPVFKaOuZ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Sailor Moon S"
                class="list__cell--item 532"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx532-R0ntF8tWnVUu.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Bungo Stray Dogs"
                class="list__cell--item 21311"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21311-hAXyT8Yoh6G9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fate/Grand Order Absolute Demonic Front: Babylonia"
                class="list__cell--item 103275"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx103275-SN0wwshS3tWA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magical Girl Lyrical Nanoha A's"
                class="list__cell--item 77"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx77-SwBCj7R1enWi.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Princess Connect! Re:Dive Season 2"
                class="list__cell--item 122808"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx122808-TUKyfYWKmOX3.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="My Hero Academia"
                class="list__cell--item 21459"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21459-oZMZ7JwS5Sxq.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Clover"
                class="list__cell--item 97940"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx97940-bPydLjny8PUw.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="The Rising of the Shield Hero"
                class="list__cell--item 99263"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx99263-SJSk5d6mhQZO.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: The Labyrinth of Magic"
                class="list__cell--item 14513"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14513-b4C3J03GF6UT.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Noragami"
                class="list__cell--item 20447"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20447-EoQXeygHaVCK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon"
                class="list__cell--item 889"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx889-Wf4GZRnHv6Dp.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Second Arc"
                class="list__cell--item 20879"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20879-IqgXMXuUMvRM.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2"
                class="list__cell--item 20652"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20652-8ft6GZKEoeWn.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Toilet-bound Hanako-kun"
                class="list__cell--item 108463"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx108463-knWkFUR311ho.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 15059"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/15059.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fullmetal Alchemist"
                class="list__cell--item 121"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx121-JUlbsyhTUNkk.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball Z"
                class="list__cell--item 813"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx813-QBIvCQgHcjcF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 2"
                class="list__cell--item 99557"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx99557-AiXG7q4CsRFG.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kill la Kill"
                class="list__cell--item 18679"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx18679-zE07Y4SFaOiO.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Rurouni Kenshin"
                class="list__cell--item 45"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx45-DEFgZRCxiGmF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Moribito: Guardian of the Spirit"
                class="list__cell--item 1827"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1827-snIp62SY7ZFK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure: Stardust Crusaders"
                class="list__cell--item 20474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20474-0VwWX4bKJkb1.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Yona of the Dawn"
                class="list__cell--item 20770"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20770-brCDvhTXlums.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!!"
                class="list__cell--item 6746"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6746-Q4EmstN2fy0R.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 4th Stage"
                class="list__cell--item 18"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b18-r7IirVmwP89u.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Third Arc"
                class="list__cell--item 20880"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20880-WsvmgSdL8lhP.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Naruto"
                class="list__cell--item 20"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20-YJvLbgJQPCoI.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part V"
                class="list__cell--item 100957"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx100957-YzfrlJDqswJc.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dorohedoro"
                class="list__cell--item 105228"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx105228-9KSgNMIX3kPa.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy: Sword Travels in the East"
                class="list__cell--item 98143"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx98143-PW8iwqFlNS4M.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Assassination Classroom"
                class="list__cell--item 20755"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20755-q0b3Ok1cAbPd.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 2nd Stage"
                class="list__cell--item 186"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186-xlQSLsOJbrx4.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon: The Second Barrage"
                class="list__cell--item 1519"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1519-cScqJxQW3LNL.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 2402"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx2402-hbo1SbfcM5hm.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="That Time I Got Reincarnated as a Slime"
                class="list__cell--item 101280"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101280-ezBXqEHi8pg0.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kingdom Season 2"
                class="list__cell--item 17389"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17389-jf3N776Tv7P5.jpg"
              />
            </section>
          </div>
        </div>
      </div>
      <h1>
        Some problem with 
        Drama
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Adventure
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mystery
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Romance
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Sci-fi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Fantasy
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Ecchi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mecha
         data from anilist!
      </h1>
    </section>
  </section>
</main>
`;

exports[`Main component test should take main page 1`] = `
<main>
  <header
    class="header__browser"
    style="background-image: url(undefined);"
  >
    <h1
      class="header--logo"
      style="color: white; text-shadow: 0px 0px 6px white, 0px 0px 2px black;"
    >
      AnimeBonds
    </h1>
    <span
      aria-label="search"
      class="header--search"
      data-testid="search-button"
      role="img"
    >
      🔎
    </span>
  </header>
  <section
    class="list__page"
    style="padding-top: 0px;"
  >
    <section
      class="list__row"
    >
      <div
        class="list__section"
      >
        <div
          class="list__title"
        >
          Action
        </div>
        <div
          class="list__section--next"
        />
        <div
          class="list__section--next after"
        />
        <div
          class="list__section--shadow"
        />
        <div
          class="list__wrapper"
        >
          <div
            class="list__wrapper--slide"
            data-genre="action"
            data-load="done"
            style="transform: translateX(-0px);"
          >
            <section
              class="list__cell"
            >
              <img
                alt="Log Horizon"
                class="list__cell--item 17265"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17265-95SA9keO8Jtv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kenichi: The Mightiest Disciple"
                class="list__cell--item 1559"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1559-7ZlyZxtBNo8g.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Ushio and Tora 2 (TV)"
                class="list__cell--item 21241"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21241-Avzz7tcb0yTy.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball"
                class="list__cell--item 223"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx223-Ld6vrSnd081L.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Heartcatch Precure!"
                class="list__cell--item 7645"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx7645-YRvajw8WUsfJ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: Adventure of Sinbad"
                class="list__cell--item 21394"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21394-yauvzIHGAoZv.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part IV"
                class="list__cell--item 20906"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20906-6hK5SuAB4MmV.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Overlord III"
                class="list__cell--item 101474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101474-tGRyvSAWMjU9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure (TV)"
                class="list__cell--item 14719"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14719-XFOPewvDtDdA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Blood Blockade Battlefront & Beyond"
                class="list__cell--item 97886"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx97886-iArtYIxZzGcR.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 3"
                class="list__cell--item 119806"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx119806-fM8V7oRgmSmh.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Angel Beats!"
                class="list__cell--item 6547"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6547-3jWzWyXg34Et.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Saga of Tanya the Evil"
                class="list__cell--item 21613"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21613-uh46F6TNGbNf.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Full Metal Panic? Fumoffu"
                class="list__cell--item 72"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx72-dalTPVFKaOuZ.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Sailor Moon S"
                class="list__cell--item 532"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx532-R0ntF8tWnVUu.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Bungo Stray Dogs"
                class="list__cell--item 21311"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx21311-hAXyT8Yoh6G9.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fate/Grand Order Absolute Demonic Front: Babylonia"
                class="list__cell--item 103275"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx103275-SN0wwshS3tWA.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magical Girl Lyrical Nanoha A's"
                class="list__cell--item 77"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx77-SwBCj7R1enWi.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Princess Connect! Re:Dive Season 2"
                class="list__cell--item 122808"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx122808-TUKyfYWKmOX3.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="My Hero Academia"
                class="list__cell--item 21459"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx21459-oZMZ7JwS5Sxq.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Clover"
                class="list__cell--item 97940"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx97940-bPydLjny8PUw.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="The Rising of the Shield Hero"
                class="list__cell--item 99263"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx99263-SJSk5d6mhQZO.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Magi: The Labyrinth of Magic"
                class="list__cell--item 14513"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx14513-b4C3J03GF6UT.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Noragami"
                class="list__cell--item 20447"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20447-EoQXeygHaVCK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon"
                class="list__cell--item 889"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx889-Wf4GZRnHv6Dp.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Second Arc"
                class="list__cell--item 20879"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20879-IqgXMXuUMvRM.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2"
                class="list__cell--item 20652"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20652-8ft6GZKEoeWn.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Toilet-bound Hanako-kun"
                class="list__cell--item 108463"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx108463-knWkFUR311ho.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 15059"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/15059.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Fullmetal Alchemist"
                class="list__cell--item 121"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx121-JUlbsyhTUNkk.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dragon Ball Z"
                class="list__cell--item 813"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx813-QBIvCQgHcjcF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy Sword Seekers 2"
                class="list__cell--item 99557"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx99557-AiXG7q4CsRFG.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kill la Kill"
                class="list__cell--item 18679"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx18679-zE07Y4SFaOiO.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Rurouni Kenshin"
                class="list__cell--item 45"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx45-DEFgZRCxiGmF.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Moribito: Guardian of the Spirit"
                class="list__cell--item 1827"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1827-snIp62SY7ZFK.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="JoJo's Bizarre Adventure: Stardust Crusaders"
                class="list__cell--item 20474"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20474-0VwWX4bKJkb1.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Yona of the Dawn"
                class="list__cell--item 20770"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20770-brCDvhTXlums.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!!"
                class="list__cell--item 6746"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx6746-Q4EmstN2fy0R.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 4th Stage"
                class="list__cell--item 18"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b18-r7IirVmwP89u.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Durarara!! X2 The Third Arc"
                class="list__cell--item 20880"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20880-WsvmgSdL8lhP.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Naruto"
                class="list__cell--item 20"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20-YJvLbgJQPCoI.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Lupin the 3rd Part V"
                class="list__cell--item 100957"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx100957-YzfrlJDqswJc.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Dorohedoro"
                class="list__cell--item 105228"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx105228-9KSgNMIX3kPa.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Thunderbolt Fantasy: Sword Travels in the East"
                class="list__cell--item 98143"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx98143-PW8iwqFlNS4M.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Assassination Classroom"
                class="list__cell--item 20755"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx20755-q0b3Ok1cAbPd.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Initial D 2nd Stage"
                class="list__cell--item 186"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186-xlQSLsOJbrx4.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Black Lagoon: The Second Barrage"
                class="list__cell--item 1519"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx1519-cScqJxQW3LNL.png"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                class="list__cell--item 2402"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/nx2402-hbo1SbfcM5hm.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="That Time I Got Reincarnated as a Slime"
                class="list__cell--item 101280"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx101280-ezBXqEHi8pg0.jpg"
              />
            </section>
            <section
              class="list__cell"
            >
              <img
                alt="Kingdom Season 2"
                class="list__cell--item 17389"
                src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/bx17389-jf3N776Tv7P5.jpg"
              />
            </section>
          </div>
        </div>
      </div>
      <h1>
        Some problem with 
        Drama
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Adventure
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mystery
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Romance
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Sci-fi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Fantasy
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Ecchi
         data from anilist!
      </h1>
      <h1>
        Some problem with 
        Mecha
         data from anilist!
      </h1>
    </section>
  </section>
</main>
`;
